...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.tadje.myapplication.ui.EmployeeHolidayFragment">

        <!-- TODO: Update blank fragment layout -->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/fragment_container_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/employeeText"
...
                android:layout_height="41dp"
                android:layout_marginBottom="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Füge Urlaubstage ein"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/addEmployeeHolidayButton"
                app:layout_constraintTop_toBottomOf="@+id/recyclerviewEmployee"
                app:layout_constraintVertical_bias="0.597" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerviewEmployeeHoliday"
                android:layout_width="347dp"
                android:layout_height="333dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
...
